# llm-inference-research

./: .gitignore  Eval.ipynb  EvalPythia.ipynb  LICENSE  NOTICE.md  Quantisation.ipynb  README.md  dev  requirements.txt  run_sweep.py  setup.cfg  setup.py  sparq_benchmark.py  test_sparq_benchmark.py
2023-05-quantisation/: Analysis.ipynb  sweep.py
2023-05-quantisation-4-8bit/: Analysis.ipynb  Presentation.ipynb  sweep.py
2023-05-quantisation-4bit/: Analysis.ipynb  sweep.py
2023-06-lambada/: Lambada.ipynb
2023-06-sparse-softmax-lambada/: Sparse_softmax_output_comparison.ipynb  sweep_lambada.py
2023-07-sparse-softmax-triviaqa/: Sparse_softmax_triviaqa.ipynb
2023-08-avg-dataset-shots/: Analysis.ipynb  sweep.py
2023-08-avg-leftover-token/: Analysis.ipynb
2023-08-qa-eval-demo/: QAEval.ipynb
2023-08-squad-few-shot/: Analysis.ipynb  summary.json  sweep.py
2023-08-topk-before/: sweep.py
2023-08-triviaqa-prompts/: sweep.py
2023-08-v-mag-triviaqa-wiki/: Analysis.ipynb
ipu/: .clang-format  build.ninja  sparq_benchmark.cpp  test.py
llminference/: __init__.py  ann_attention.py  bpc.py  eval_adapter.py  eval_utils.py  eviction_attention.py  experiments.py  llama_attention.py  outcompare.py  perplexity.py  pipelined_models.py  qa.py  quantisation.py  repetition.py  sparse_attention.py  summarisation.py  utility.py
scripts/: Eval.ipynb  GatherInnerBMV.ipynb  GatherInnerMatrixOnlyBMV.ipynb  Quantisation.ipynb  check.sh  generate_outcompare_datasets.py  job_runner.sh  run_gather_inner_bmv_benchmark.py  run_gather_matmul_benchmark.py  run_sweep.py  (+2 more)
(+218 files in other folders)
