[options]
packages =
    llminference

[mypy]
pretty = true
show_error_codes = true
strict = true
check_untyped_defs = true
# missing return statement is idiomatic for returning Optional[]
disable_error_code = return

[mypy-datasets.*]
ignore_missing_imports = True

[mypy-torchaudio.*]
ignore_missing_imports = True

[mypy-transformers.*]
ignore_missing_imports = True

[mypy-rouge_score.*]
ignore_missing_imports = True

[flake8]
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    llminference/models/llama_attention.py:E501
    llminference/models/mistral_attention.py:E501

[isort]
profile = black

[tool:pytest]
addopts = --no-cov-on-fail

[coverage:report]
# fail_under = 100
skip_covered = true
show_missing = true
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    assert False
